Modified the contact us section

--- a/about.html
+++ b/about.html
@@ -85,8 +85,8 @@
     </header>
     <!--Header End-->
     <!--About Us Start-->
-    <section id="about" class="about mt-5" style="margin: 0px 30px;">
-        <div class="about-1">
+    <section id="about" class="about mt-5" >
+        <div class="about-1 text-center">
             <h1> ABOUT US </h1>
         </div>
         <div class="container-fluid">
