--- a/services.html
+++ b/services.html
@@ -87,7 +87,11 @@
     <!--Services Start-->
     <section class="services">
         <div class="container">
-            <h1 class="sub-title">Our Services</h1>
+            <section class="book">
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                        <h1 style=" text-align:center; padding: 50px 0px;">Our Services</h1>
+                </div>
+            </section>
             <div class="work-list">
                 <div class="work">
                     <img src="img/PalliativeCare.png">
