Booking Page Redesigned

--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
                     <div class="row">
                         <h2 class="text-center"> Values </h2>
                         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                            <div class="about-item my-5 py-5" style="height: 600px;">
+                            <div class="about-item my-5 py-5 h-auto">
                                 <h3 class="text-center"><i class="fa fa-pencil"></i></br>Safety</h3>
                                 <hr>
                                 <p>Mirkuz Home Based Health Care Service strives to manage critical aspects of risks to
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                            <div class="about-item my-5 py-5" style="height: 600px;">
+                            <div class="about-item my-5 py-5 h-auto">
                                 <h3 class="text-center"><i class="fa fa-pencil"></i></br>Community</h3>
                                 <hr>
                                 <p>We are determined to have strong, mutually beneficial relationships with our
@@ -216,7 +216,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                            <div class="about-item my-5 py-5" style="height: 600px;">
+                            <div class="about-item my-5 py-5 h-auto">
                                 <h3 class="text-center"><i class="fa fa-pencil"></i></br>Integrity and Ethics</h3>
                                 <hr>
                                 <p>We are honest, accountable, transparent and responsible in our approach. We embrace
