--- a/about.html
+++ b/about.html
@@ -318,11 +318,14 @@
 
         <!-- Copyright -->
         <div class="text-center py-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2022 Copyright: Balageru Inc.
+            © 2023 Copyright: Nano Technologies Inc.
         </div>
         <!-- Copyright -->
     </footer>
     <!--=============Footer End=============-->
 </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
 </html>
