--- a/services.html
+++ b/services.html
@@ -25,6 +25,7 @@
 </head>
 
 <body style="background-color: #FBFCF5;">
+    
     <!--Header Start-->
     <header>
         <section id="topbar"
@@ -84,6 +85,7 @@
         <!--Navbar End-->
     </header>
     <!--Header End-->
+
     <!--Services Start-->
     <section class="services">
         <div class="container">
@@ -280,12 +282,15 @@
 
         <!-- Copyright -->
         <div class="text-center py-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2022 Copyright: Balageru Inc.
+            © 2023 Copyright: Nano Technologies Inc.
         </div>
         <!-- Copyright -->
     </footer>
     <!--=============Footer End=============-->
     <!--Objective End-->
 </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
 </html>
