Completed Services and About Us Section

--- a/services.html
+++ b/services.html
@@ -89,13 +89,15 @@
     <!--Services Start-->
     <section class="services">
         <div class="container">
-            <section class="book">
-                <div class="col-lg-12 col-md-12 col-xs-12">
-                        <h1 style=" text-align:center; padding: 50px 0px;">Our Services</h1>
+            <section>
+                <div class="col-lg-12 col-md-12 col-xs-12 text-center p-5">
+                        <h1 class="mb-3">Our Services</h1>
+                        <hr class="bg-primary text-center m-auto" style="font-weight: bold; width: 120px; ">
+                        <p class="mt-4">We specialize in caring for variety of in-home care options</p>
                 </div>
             </section>
             <div class="work-list">
-                <div class="work">
+                <div class="work shadow ">
                     <img src="img/PalliativeCare.png">
                     <div class="layer">
                         <h3>Palliative Care</h3>
@@ -103,7 +105,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow ">
                     <img src="img/cancer.jpg">
                     <div class="layer">
                         <h3>Cancer Care</h3>
@@ -111,7 +113,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/post-surgery.png">
                     <div class="layer">
                         <h3>Post-Surgery Care</h3>
@@ -119,7 +121,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/protection.jpg">
                     <div class="layer">
                         <h3>Disability Care</h3>
@@ -127,7 +129,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/agedcaresystem.jpg">
                     <div class="layer">
                         <h3>Aged Care</h3>
@@ -135,7 +137,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/leg.jpg">
                     <div class="layer">
                         <h3>Assist Rehabilitation of Stroke Patients</h3>
@@ -143,7 +145,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/ChildCareDollarReport.jpg">
                     <div class="layer">
                         <h3>Child Care</h3>
@@ -151,7 +153,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/PostnatalCareG.jpg">
                     <div class="layer">
                         <h3>Post Natal Care</h3>
@@ -159,7 +161,7 @@
 
                     </div>
                 </div>
-                <div class="work">
+                <div class="work shadow">
                     <img src="img/Dementia-Care.jpg">
                     <div class="layer">
                         <h3>Dementia care</h3>
@@ -176,9 +178,9 @@
         <div class="container-fluid">
             <!--Section description-->
             <div class="row  pt-5 pb-5">
-                <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
+                <div class="col-md-7 d-flex flex-column justify-content-center align-items-stretch bg-primary">
 
-                    <div class="content">
+                    <div class="content text-white">
                         <h3>Our Objective</h3>
                         <ul class="qualities-indicator">
                             <li>To achieving the highest standards in the delivery of Private Health Care, by providing reliable Health Care Services that best meets the needs and expectations of our clients.</li>
@@ -187,8 +189,8 @@
                     </div>
 
                 </div>
-                <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("img/image.jpg");'>
-
+                <div class="col-md-5 align-items-stretch">
+                    <img src="img/image.jpg" alt="Treating patients" class="h-100 w-100">
                 </div>
 
                 
