--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                        <div class="about-item shadow-lg h-75">
+                        <div class="about-item shadow-lg rounded h-75">
 
                             <h3 class="text-center"><i class="fa fa-book"></i></br>Vision</h3>
                             <hr>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                        <div class="about-item shadow-lg h-75">
+                        <div class="about-item shadow-lg rounded h-75">
 
 
                             <h3 class="text-center"><i class="fa fa-globe"></i></br>Mission</h3>
@@ -193,7 +193,7 @@
                 <div class="row">
                     <h2 class="text-center"> Values </h2>
                     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                        <div class="about-item shadow-lg h-75">
+                        <div class="about-item shadow-lg rounded h-75">
                             <h3 class="text-center"><i class="fa fa-pencil"></i></br>Safety</h3>
                             <hr>
                             <p>Mirkuz Home Based Health Care Service strives to manage critical aspects of risks to
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                        <div class="about-item shadow-lg h-75">
+                        <div class="about-item shadow-lg rounded h-75">
                             <h3 class="text-center"><i class="fa fa-pencil"></i></br>Community</h3>
                             <hr>
                             <p>We are determined to have strong, mutually beneficial relationships with our
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-                        <div class="about-item shadow-lg h-75">
+                        <div class="about-item shadow-lg rounded h-75">
                             <h3 class="text-center"><i class="fa fa-pencil"></i></br>Integrity and Ethics</h3>
                             <hr>
                             <p>We are honest, accountable, transparent and responsible in our approach. We embrace
