Completed the booking section!

--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
                         <h3>Our Objective</h3>
                         <ul class="qualities-indicator">
                             <li>To achieving the highest standards in the delivery of Private Health Care, by providing reliable Health Care Services that best meets the needs and expectations of our clients.</li>
-                            <li>To participate in Country’s Health Care market by improving its quality of Services as effective as possible.</li>
+                            <li>To participate in Country&#39;s Health Care market by improving its quality of Services as effective as possible.</li>
                         </ul>
                     </div>
 
